--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ papers:
     title: An energy-aware and under-SLA-constraints VM consolidation strategy based on the optimal matching method
     authors: Weiling Li, <b>Yongbo Wang</b>, Yuandou Wang, Yunni Xia, Kunyin Guo, Quanwang Wu, Qingsheng Zhu
     booktitle: International Journal of Web Services Research Volume 14, Issue 4 (IJWSR)
-    booktitle-url: http://speechnlp.github.io/2017/
+    booktitle-url: 
     venue: workshop
   - layout: paper
     year: 2016
@@ -17,8 +17,8 @@ papers:
     title: "Stochastic performance analysis of unreliable IaaS clouds"
     authors: <b>YongBuo Wang</b>, HaiChuan Zhang, KunYin Guo, Yunni Xia*, WeiLing Li
     booktitle: "Proceedings of S2 International Conference on Internet of Things (ICIOT)"
-    booktitle-url: http://universaldependencies.org/conll17/
-    doc-url: http://aclweb.org/anthology/K17-3010
+    booktitle-url: 
+    doc-url: 
     venue: workshop
     abstract: >
       Performance evaluation of cloud data-centers has drawn considerable attention from academy and industry. In this study, we present an analytical approach to the performance analysis of Infrastructure-as-a-Service cloud data-centers with unreliable task executions and resubmissions of unsuccessful tasks. Several performance metrics are considered and analyzed under variable load intensities, failure frequencies, multiplexing abilities, and service intensities. We also conduct a case study based on a real-world cloud data-center and employ a confidence interval check to validate the correctness of the proposed model. 
