--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ papers:
   - layout: paper
     year: 2017
     paper-type: inproceedings
-    img: inpress2
+    img: ICIOT2016
     title: An energy-aware and under-SLA-constraints VM consolidation strategy based on the optimal matching method
     authors: Weiling Li, <b>Yongbo Wang</b>, Yuandou Wang, Yunni Xia, Kunyin Guo, Quanwang Wu, Qingsheng Zhu
     booktitle: International Journal of Web Services Research Volume 14, Issue 4 (IJWSR)
@@ -13,7 +13,7 @@ papers:
   - layout: paper
     year: 2016
     paper-type: inproceedings
-    img: conll2017
+    img: ICIOT2016
     title: "Stochastic performance analysis of unreliable IaaS clouds"
     authors: <b>YongBuo Wang</b>, HaiChuan Zhang, KunYin Guo, Yunni Xia*, WeiLing Li
     booktitle: "Proceedings of S2 International Conference on Internet of Things (ICIOT)"
