--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ papers:
     title: "Stochastic performance analysis of unreliable IaaS clouds"
     authors: <b>YongBuo Wang</b>, HaiChuan Zhang, KunYin Guo, Yunni Xia*, WeiLing Li
     booktitle: "Proceedings of S2 International Conference on Internet of Things (ICIOT)"
-    booktitle-url: 
-    doc-url: https://github.com/yongbowin/yongbowin.github.io/tree/master/papers/Stochastic performance analysis of unreliable IaaS clouds.pdf
+    booktitle-url: papers/Stochastic performance analysis of unreliable IaaS clouds.pdf
+    doc-url: papers/Stochastic performance analysis of unreliable IaaS clouds.pdf
     venue: workshop
     abstract: >
       Performance evaluation of cloud data-centers has drawn considerable attention from academy and industry. In this study, we present an analytical approach to the performance analysis of Infrastructure-as-a-Service cloud data-centers with unreliable task executions and resubmissions of unsuccessful tasks. Several performance metrics are considered and analyzed under variable load intensities, failure frequencies, multiplexing abilities, and service intensities. We also conduct a case study based on a real-world cloud data-center and employ a confidence interval check to validate the correctness of the proposed model. 
