--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ papers:
     authors: Weiling Li, <span class="color-blue">Yongbo Wang</span>, Yuandou Wang, Yunni Xia, Kunyin Guo, Quanwang Wu, Qingsheng Zhu
     booktitle: International Journal of Web Services Research Volume 14, Issue 4 (<strong>IJWSR</strong>)
     booktitle-url: papers/An Energy-Aware and Under-SLA-Constraints VM Consolidation Strategy Based on the Optimal Matching Method.pdf
+    doc-url: papers/An Energy-Aware and Under-SLA-Constraints VM Consolidation Strategy Based on the Optimal Matching Method.pdf
     venue: workshop
     abstract: >
         Growing demand of computational power brings increasing scale and complexity of cloud datacenters.
